<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/scrollView2"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context=".MainActivity"
  tools:showIn="@layout/activity_main">


  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/textView"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen_16dp"
      android:layout_marginStart="@dimen/dimen_8dp"
      android:layout_marginEnd="@dimen/dimen_8dp"
      android:text="@string/textview_cafe_menu"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
      android:id="@+id/imageViewBurger"
      android:layout_width="@dimen/dimen_100dp"
      android:layout_height="@dimen/dimen_100dp"
      android:layout_marginTop="@dimen/dimen_8dp"
      android:layout_marginStart="@dimen/dimen_8dp"
      android:layout_marginEnd="@dimen/dimen_8dp"
      android:contentDescription="@string/app_name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      app:srcCompat="@drawable/burger"/>

    <ImageView
      android:id="@+id/imageViewFruitSalad"
      android:layout_width="@dimen/dimen_100dp"
      android:layout_height="@dimen/dimen_100dp"
      android:layout_marginTop="@dimen/dimen_16dp"
      android:layout_marginStart="@dimen/dimen_8dp"
      android:layout_marginEnd="@dimen/dimen_8dp"
      android:contentDescription="@string/app_name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageViewBurger"
      app:srcCompat="@drawable/fruit_salad"/>

    <ImageView
      android:id="@+id/imageViewPanCake"
      android:layout_width="@dimen/dimen_100dp"
      android:layout_height="@dimen/dimen_100dp"
      android:layout_marginTop="@dimen/dimen_16dp"
      android:layout_marginStart="@dimen/dimen_8dp"
      android:layout_marginEnd="@dimen/dimen_8dp"
      android:contentDescription="@string/app_name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageViewFruitSalad"
      app:srcCompat="@drawable/pancake"/>
    <TextView
      android:id="@+id/textViewBurgerInfo"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen_16dp"
      android:layout_marginStart="@dimen/dimen_8dp"
      android:layout_marginEnd="@dimen/dimen_8dp"
      android:maxLines="3"
      android:text="@string/burger_info"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/imageViewBurger"
      app:layout_constraintTop_toTopOf="@+id/imageViewBurger"/>
    <TextView
      android:id="@+id/textViewFruitSalad"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen_16dp"
      android:layout_marginStart="@dimen/dimen_8dp"
      android:layout_marginEnd="@dimen/dimen_8dp"
      android:maxLines="3"
      android:text="@string/fruit_salad_info"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/imageViewFruitSalad"
      app:layout_constraintTop_toTopOf="@+id/imageViewFruitSalad"/>
    <TextView
      android:id="@+id/textViewPanCake"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen_16dp"
      android:layout_marginStart="@dimen/dimen_8dp"
      android:layout_marginEnd="@dimen/dimen_8dp"
      android:maxLines="3"
      android:text="@string/pancake_info"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/imageViewPanCake"
      app:layout_constraintTop_toTopOf="@+id/imageViewPanCake"/>
    <TextView
      android:id="@+id/textViewQuantityLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen_8dp"
      android:layout_marginStart="@dimen/dimen_16dp"
      android:layout_marginEnd="@dimen/dimen_8dp"
      android:text="@string/quantity_label"
      android:textAllCaps="false"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageViewPanCake"/>
    <Spinner
      android:id="@+id/spinnerQuantity"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen_8dp"
      android:layout_marginStart="@dimen/dimen_8dp"
      android:layout_marginEnd="@dimen/dimen_8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewQuantityLabel"/>
    <RadioGroup
      android:id="@+id/radioGroup"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen_16dp"
      android:layout_marginStart="@dimen/dimen_8dp"
      android:layout_marginEnd="@dimen/dimen_8dp"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/spinnerQuantity">

      <RadioButton
        android:id="@+id/radioButtonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver_to_home"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

      <RadioButton
        android:id="@+id/radioButtonOffice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver_to_office"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


      <RadioButton
        android:id="@+id/radioButtonOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </RadioGroup>
    <Button
      android:id="@+id/buttonPlaceOrder"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:background="@color/colorPrimary"
      android:onClick="placeOrder"
      android:text="@string/button_place_order_label"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/colorWhite"
      android:textSize="22sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
  </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>


